changed html layout to make the file more readable and easier to work with before logic

--- a/index.html
+++ b/index.html
@@ -10,7 +10,42 @@
 </head>
 
 <body>
-    <div class="score display-one">
+<!-- player one div start -->
+    <div class="player one">
+         <div class="score display-one">
+            <h3>Player one score</h3>
+             <p id="player1score"></p>
+         </div>
+
+        <div class="dice-images">
+            <img class="image player-one-image" src="image1.png">
+        </div>
+        
+        <div class="player-buttons">
+            <button class="button player-one">Player 1 press to roll</button> 
+        </div>
+    </div>
+<!-- Player one div end -->
+
+<!-- Player two div start -->
+    <div class="player two">
+        <div class="score display-two">
+            <h3>Player two score</h3>
+            <p id="player2score"></p>
+        </div>
+
+        <div class="dice-images">
+            <img class="image player-two-image" src="image1.png">
+         </div>
+
+        <div class="player-buttons">
+            <button class="button player-two">Player 2 press to roll</button>
+        </div> 
+    </div>
+<!-- Player two div end -->
+
+
+    <!-- <div class="score display-one">
         <h3>Player one score</h3>
         <p id="player1score"></p>
     </div>
@@ -19,7 +54,7 @@
             <h3>Player two score</h3>
             <p id="player2score"></p>
     </div>
-    <!-- <p class="score player-one"></p> -->
+    <p class="score player-one"></p>
     <br>
 
     <div class="dice-images"></div>
@@ -30,7 +65,7 @@
     <div class="player-buttons">
         <button class="button player-one">Player 1 press to roll</button>
         <button class="button player-two">Player 2 press to roll</button>
-    </div>  
+    </div>   -->
 
 <script src="script.js"></script>
 </body>
