cleaned up syntax and added a funtion to clear the score

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
          </div>
 
         <div class="dice-images">
-            <img class="image player-one-image" src="image1.png">
+            <img id="image1" class="image player-one-image" src="image1.png">
         </div>
         
         <div class="player-buttons">
-            <button class="button player-one">Player 1 press to roll</button> 
+            <button id="button" class="button player-one">Player 1 press to roll</button> 
         </div>
     </div>
 <!-- Player one div end -->
@@ -35,11 +35,11 @@
         </div>
 
         <div class="dice-images">
-            <img class="image player-two-image" src="image1.png">
+            <img id="image2" class="image player-two-image" src="image1.png">
          </div>
 
         <div class="player-buttons">
-            <button class="button player-two">Player 2 press to roll</button>
+            <button id="button2" class="button player-two">Player 2 press to roll</button>
         </div> 
     </div>
 <!-- Player two div end -->
